--- a/index.html
+++ b/index.html
@@ -499,6 +499,10 @@
                         Session Schedule Breakdown
                     </h3>
                     <div class="flex space-x-2">
+                        <button id="autoPopulateBtn" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition duration-200 font-medium">
+                            <i class="fas fa-magic mr-2"></i>
+                            Auto-Populate
+                        </button>
                         <button id="assignPapersBtn" class="bg-green-600 text-white px-4 py-2 rounded-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 transition duration-200 font-medium">
                             <i class="fas fa-tasks mr-2"></i>
                             Assign Papers
