--- a/index.html
+++ b/index.html
@@ -498,23 +498,42 @@
                         <i class="fas fa-calendar-week text-purple-600 mr-2"></i>
                         Session Schedule Breakdown
                     </h3>
-                    <div class="flex space-x-2">
-                        <button id="autoPopulateBtn" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition duration-200 font-medium">
-                            <i class="fas fa-magic mr-2"></i>
-                            Auto-Populate
-                        </button>
-                        <button id="assignPapersBtn" class="bg-green-600 text-white px-4 py-2 rounded-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 transition duration-200 font-medium">
-                            <i class="fas fa-tasks mr-2"></i>
-                            Assign Papers
-                        </button>
-                        <button id="resetCustomizations" class="bg-gray-500 text-white px-4 py-2 rounded-md hover:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2 transition duration-200 font-medium">
-                            <i class="fas fa-undo mr-2"></i>
-                            Reset All
-                        </button>
-                        <button id="exportPDF" class="bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 transition duration-200 font-medium">
-                            <i class="fas fa-file-pdf mr-2"></i>
-                            Export PDF
-                        </button>
+                    <div class="flex flex-wrap gap-2">
+                        <!-- Convention Management Buttons -->
+                        <div class="flex space-x-2 border-r border-gray-300 pr-3">
+                            <button id="newConventionBtn" class="bg-emerald-600 text-white px-4 py-2 rounded-md hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 transition duration-200 font-medium">
+                                <i class="fas fa-plus mr-2"></i>
+                                New
+                            </button>
+                            <button id="saveConventionBtn" class="bg-orange-600 text-white px-4 py-2 rounded-md hover:bg-orange-700 focus:outline-none focus:ring-2 focus:ring-orange-500 focus:ring-offset-2 transition duration-200 font-medium">
+                                <i class="fas fa-save mr-2"></i>
+                                Save
+                            </button>
+                            <button id="loadConventionBtn" class="bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 transition duration-200 font-medium">
+                                <i class="fas fa-folder-open mr-2"></i>
+                                Load
+                            </button>
+                        </div>
+                        
+                        <!-- Session Management Buttons -->
+                        <div class="flex space-x-2">
+                            <button id="autoPopulateBtn" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition duration-200 font-medium">
+                                <i class="fas fa-magic mr-2"></i>
+                                Auto-Populate
+                            </button>
+                            <button id="assignPapersBtn" class="bg-green-600 text-white px-4 py-2 rounded-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 transition duration-200 font-medium">
+                                <i class="fas fa-tasks mr-2"></i>
+                                Assign Papers
+                            </button>
+                            <button id="resetCustomizations" class="bg-gray-500 text-white px-4 py-2 rounded-md hover:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2 transition duration-200 font-medium">
+                                <i class="fas fa-undo mr-2"></i>
+                                Reset All
+                            </button>
+                            <button id="exportPDF" class="bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 transition duration-200 font-medium">
+                                <i class="fas fa-file-pdf mr-2"></i>
+                                Export PDF
+                            </button>
+                        </div>
                     </div>
                 </div>
                 
